--- a/package.json
+++ b/package.json
@@ -10,57 +10,29 @@
     "Other"
   ],
   "activationEvents": [
-  "onView:todoView",
-  "onCommand:todoSidebar.addTodo"
-],
-
+    "onView:todoView"
+  ],
   "main": "./out/extension.js",
   "contributes": {
-  "viewsContainers": {
-    "activitybar": [
-      {
-        "id": "todoSidebar",
-        "title": "TODOs",
-        "icon": "media/todo.svg"
-      }
-    ]
-  },
-  "views": {
-    "todoSidebar": [
-      {
-        "id": "todoView",
-        "name": "My TODOs"
-      }
-    ]
-  },
-"commands": [
- {
-  "command": "todoSidebar.addTodo",
-  "title": "TODO: Add Item"
-},
-{
-  "command": "todoSidebar.deleteTodo",
-  "title": "TODO: Delete Item"
-}
-
-],
-"menus": {
-  "view/item/context": [
-    {
-      "command": "todoSidebar.deleteTodo",
-      "when": "view == todoView && viewItem == todoItem",
-      "group": "inline"
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "todoSidebar",
+          "title": "TODOs",
+          "icon": "media/todo.svg"
+        }
+      ]
+    },
+    "views": {
+      "todoSidebar": [
+        {
+          "id": "todoView",
+          "name": "My TODOs",
+          "type": "webview"
+        }
+      ]
     }
-  ]
-},
-"viewsWelcome": [
-  {
-    "view": "todoView",
-    "contents": "No TODOs yet.\n\n[➕ Add TODO](command:todoSidebar.addTodo)"
   }
-]
-
-}
 ,
   "scripts": {
     "vscode:prepublish": "npm run compile",
