--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "publisher": "aayushsah98488",
   "name": "todo-sidebar",
 "displayName": "TODO Sidebar",
   "description": "Sidebar TODO manager for VsCode",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "icon": "media/icon.jpg",
   "engines": {
     "vscode": "^1.85.0"
   },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/Aayushsah6969/Vs-Code-TODO-Extension"
+},
   "categories": [
     "Other"
   ],
