--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "publisher": "aayushsah98488",
-  "name": "todo-sidebar",
+  "name": "OpenTodo",
 "displayName": "TODO Sidebar",
   "description": "Sidebar TODO manager for VsCode",
   "version": "1.0.0",
@@ -49,7 +49,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.107.0",
+    "@types/vscode": "^1.85.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "typescript-eslint": "^8.48.1",
