--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "publisher": "aayushsah98488",
-  "name": "OpenTodo",
+  "name": "Open8Todo",
 "displayName": "TODO Sidebar",
   "description": "Sidebar TODO manager for VsCode",
   "version": "1.0.0",
